# TeachFlow

./: .gitignore  CLAUDE.md  PROGRESSO.md  README.md  package.json  pnpm-lock.yaml
apps/web/: .env.local.example  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/dashboard/: dashboard-client.tsx  page.tsx
apps/web/app/login/: login-form.tsx  page.tsx
apps/web/app/signup/: page.tsx  (+1 more)
apps/web/lib/: api-server.ts  api.ts  me.ts
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_invite_codes.py  2026_05_06_1357-baseline_baseline.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/core/: constants.py  exceptions.py  permissions.py  supabase_admin.py
backend/app/models/: __init__.py  assignment.py  base.py  course.py  grade.py  identity.py  invite.py  lesson.py  quiz.py  submission.py
backend/app/routers/: assignments.py  branches.py  courses.py  dashboard.py  feed.py  health.py  invites.py  lessons.py  me.py  notifications.py  submissions.py
backend/app/schemas/: assignment.py  course.py  feed.py  identity.py  lesson.py  submission.py
backend/db/: README.md  schema.sql
design-reference/: README.md
design-reference/mobile/: screen-mobile.jsx
design-reference/web/: screen-activities.jsx  screen-branches.jsx  screen-course.jsx  screen-dashboard.jsx  screen-extras.jsx  screen-lesson.jsx  screen-quiz.jsx
(+30 files in other folders)
