[project]
name = "teachflow-backend"
version = "0.2.0"
description = "API do TeachFlow"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.9",
    "python-multipart>=0.0.12",
    "supabase>=2.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "N"]
ignore = ["B008"]  # FastAPI usa Depends() em defaults, é idiomatic

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
